# smartcontract-GeneriBa

./: Anchor.toml  LICENSE  README.md  package-lock.json
programs/generi-ba/: Cargo.toml
programs/generi-ba/src/: lib.rs
tests/: generi-ba.ts
